fix: hover overflow issue in standard list (#546)

--- a/src/css/common/components/post/post-list-standard.css
+++ b/src/css/common/components/post/post-list-standard.css
@@ -29,7 +29,7 @@
   &:hover {
     & .entry-footer {
       & .info-meta {
-        transform: translate3d(-130px, 0, 0);
+        transform: translate3d(-6em, 0, 0);
         opacity: 1;
         visibility: visible;
       }
@@ -136,9 +136,8 @@
 
     & .info-meta {
       position: absolute;
-      top: 3rem;
+      top: 20%;
       opacity: 0;
-      padding-top: 0.5rem;
       border-top: 1px solid #ddd;
       visibility: hidden;
       transition: 0.6s all ease;
